# sycl_examples

./: .buildinfo  .gitignore  00-device-discovery.cpp  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  configure  device-discovery.html  device_discovery.html  environment-dev.yml  genindex.html  index.html  objects.inv  requirements-dev.txt  search.html  searchindex.js  sycl-examples  sycl_examples
.doctrees/: device-discovery.doctree  device_discovery.doctree  environment.pickle  index.doctree
.github/workflows/: ci.yml  clang-checks.yml  docs.yml
_sources/: device-discovery.rst.txt  index.rst.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  device-discovery.rst  index.rst  references.bib
doxygen/xml/: 00-device-discovery_8cpp.xml  10-vector-add-usm_8cpp.xml  CMakeCXXCompilerId_8cpp.xml  Doxyfile.xml  dir_16c8c26a597a490ff435edae6e73b1e4.xml  dir_63772b626f2709090f0bdca0f40827b4.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_df5ce36cd226e9311e0da476ff7ac761.xml  index.xml  namespacesycl.xml
sphinx/: genindex.html  objects.inv  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle
sphinx/_sources/: device_discovery.rst.txt  index.rst.txt
src/: 00-device-discovery.cpp  10-vector-add-usm.cpp
